--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ejecutar": "node main.js",
+    "start": "node src/app.js",
     "dev": "echo \"No definido"
 
   },
